--- a/src/ScrapsPlus/ScrapsPlus.csproj
+++ b/src/ScrapsPlus/ScrapsPlus.csproj
@@ -10,6 +10,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="wwwroot\ngApp\views\profile.html" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="wwwroot\**\*;Views\**\*;Areas\**\Views">
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </None>
